Resolves: tdf#89500 catch ISO 8601 datetime in all locales

Change-Id: I906ebdc6aa5c365df98a29e9e0f319f89f6833c6
(cherry picked from commit 5d572e673dec3396487b14bb1f9e86aa8ab86786)